syntax = "proto3";
option java_multiple_files = true;
package lager;

service Warehouse{
  rpc createProduct(ProductCreationRequest) returns (ProductCreationResponse);
  rpc deleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc productExists(ProductExistsRequest) returns (ProductExistsResponse);
  rpc retrieveProduct(RetrieveProductRequest) returns (RetrieveProductResponse);
  rpc retrieveProducts(RetrieveProductsRequest) returns (RetrieveProductsResponse);
}


message Product{
  string ean = 1;
  string productName = 2;
  int32 stock = 3;
  string photoPath = 4;
  repeated string location = 5;
}

message ProductCreationRequest {
  Product toCreate = 1;
}

message ProductCreationResponse{
  bool created = 1;
}

message DeleteProductRequest{
  string ean = 1;
}

message DeleteProductResponse{
  bool deleted = 1;
}

message ProductExistsRequest{
  string ean = 1;
}

message ProductExistsResponse{
  bool exists = 1;
}

message RetrieveProductRequest{
  string ean = 1;
}

message RetrieveProductResponse{
  Product product = 1;
}

message RetrieveProductsRequest{}

message RetrieveProductsResponse{
  repeated Product product = 1;
}

